--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tahoe Bear Jerky - Premium Outdoor Apparel & Gear</title>
+    <meta name="description"
+        content="Premium outdoor apparel and gear from North Lake Tahoe. T-shirts, sweaters, hats, and stickers featuring our iconic bear designs. 100% of profits support Kings Beach Boys and Girls Club.">
+    <link rel="icon" type="image/jpeg" href="bear_logo.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;800&family=Bebas+Neue&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
 <a href="#about" class="nav-link">About</a>
 <a href="#cause" class="nav-link">Our Cause</a>
 </div>
@@ -304,5 +321,6 @@
 
 <script src="script.js"></script>
 </body>
+
 
 </html>
