Update logo to PNG and refine styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tahoe Bear Jerky - Premium Outdoor Apparel & Gear</title>
     <meta name="description"
         content="Premium outdoor apparel and gear from North Lake Tahoe. T-shirts, sweaters, hats, and stickers featuring our iconic bear designs. 100% of profits support Kings Beach Boys and Girls Club.">
-    <link rel="icon" type="image/jpeg" href="bear_logo.jpg">
+    <link rel="icon" type="image/jpeg" href="bear_logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;800&family=Bebas+Neue&display=swap"
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="bear_logo.jpg" alt="Tahoe Bear Jerky Logo" class="logo-icon">
+                <img src="bear_logo.png" alt="Tahoe Bear Jerky Logo" class="logo-icon">
                 <span class="logo-text">TAHOE BEAR JERKY</span>
             </div>
             <div class="nav-links">
@@ -283,7 +283,8 @@
             <div class="footer-bottom">
                 <p class="disclaimer">
                     <strong>Disclaimer:</strong> This is a parody website. No actual bears were harmed.
-                    Please secure your trash and enjoy the outdoors responsibly! 🐻
+                    Please secure your trash and enjoy the outdoors responsibly!
+
                 </p>
                 <p>© 2025 Tahoe Bear Jerky. All rights reserved.</p>
             </div>
